# 33routes

./: .gitignore  Makefile  README.md  index.html  install.sh  swagger.yaml
.github/workflows/: swagger.yml
backend/: .gitignore  Makefile  docker-compose.backend-prod.yml  docker-compose.backend.yml  docker-compose.databases.yml  docker-compose.traefik.yml  docker-compose.yml  traefik_dynamic.yml
backend/auth_service/: Cargo.toml  Dockerfile  Dockerfile.prod  go.mod  go.sum
backend/auth_service/database/: db_connection.go
backend/auth_service/src/: handlers.rs  main.go  main.rs  models.rs
backend/auth_service/src/handlers/: handlers.go  middlewares.go  token_creation.go
backend/auth_service/src/models/: models.go
backend/auth_service/tests/: tests.py
backend/collection_service/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/collection_service/src/: auth.rs  handlers.rs  main.rs  models.rs
backend/collection_service/tests/: tests.py
backend/comment_service/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/comment_service/src/: handlers.rs  image.rs  main.rs  models.rs
backend/comment_service/tests/: tests.py
backend/database/: .gitignore
backend/database/postgres/init/: init.sql
backend/database/postgres/test_data/: seed_data.sql
backend/image_service/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/image_service/src/: handlers.rs  main.rs  models.rs
backend/image_service/tests/: tests.py
backend/like_service/: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.prod  Makefile  conanfile.py  cxxprofile
backend/like_service/include/: handlers.hpp  server.hpp
backend/like_service/source/: handlers.cpp  main.cpp  server.cpp
backend/like_service/src/: auth.rs  handlers.rs  main.rs  models.rs
backend/moderation_service/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/moderation_service/src/: handlers.rs  main.rs  models.rs
backend/moderation_service/tests/: tests.py
backend/report_service/: Cargo.toml  Dockerfile
backend/review_service/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/review_service/src/: handlers.rs  main.rs  models.rs
backend/review_service/tests/: tests.py
backend/route_service/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/route_service/src/: handlers.rs  main.rs  models.rs
backend/route_service/tests/: tests.py
backend/scripts/: init-builder.sh
backend/search_service/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod
backend/search_service/src/: handlers.rs  main.rs  models.rs
backend/search_service/tests/: tests.py
backend/user_service/: Cargo.toml  Dockerfile  Dockerfile.prod
backend/user_service/src/: handlers.rs  main.rs  models.rs
data/: .gitignore
data/scripts/: Makefile  parse_tcx_to_sql.py  requirements.txt
data/sql/: butovskii-lesopark.sql  cheliuskinskaia-fiztekh.sql  kolomenskoe.sql  lytkarino-kotelniki.sql  moscow-kremlin-and-red-square-1-8-2016-moskovskii-kreml-kras.sql  moscow-scyscrapers-and-victory-park-by-night.sql  moscow-vorobyovy-gory-sparrow-hills-vorobevy-gory.sql  troitsk-msk-podolsk.sql  turns-of-krasnogorsk-novonikolskoye.sql
data/test_data/: bug_reports.sql  collection_routes.sql  collections.sql  reports.sql  review_comments.sql  reviews.sql  route_points.sql  seed_data.sql  users.sql
devops/: docker-compose.yml  jenkinsfile  nginx.conf
devops/alertmanager/: alertmanager.yml
docs/: swagger.yaml
frontend/: .gitignore  Dockerfile  Makefile  docker-compose.yml  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/Button/: Button.css  Button.js
frontend/src/components/Dropdown/: Dropdown.css
frontend/src/components/auth_modal/: AuthModal.css  AuthModal.js
frontend/src/components/avatar_button/: avatarButton.css  avatarButton.js
frontend/src/components/buttons/: button.css  button.js
frontend/src/components/collection_card/: collectionCard.css  collectionCard.js
frontend/src/components/comment_card/: commentBlock.js  commentCard.css  commentCard.js
frontend/src/components/dropdown/: dropdown.js
frontend/src/components/header/: header.css  (+1 more)
frontend/src/constants/: collectionTags.js
frontend/src/layouts/: AdminLayout.css  AdminLayout.js  RootLayout.css  RootLayout.js
frontend/src/pages/: CollectionListPage.js  CollectionPage.js  MainPage.js  RoutePage.js
(+44 files in other folders)
