[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-server = "0.7.1"
bcrypt = "0.13"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio-postgres = "0.7.12"
dotenv = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tower-http = { version = "0.6.1", features = ["cors"] }
chrono = "0.4.38"