[package]
name = "image_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
axum = { version = "0.7.9", features = ["multipart", "macros"] }
axum-server = "0.7.1"
tower-http = { version = "0.6.1", features = ["cors"] }
dotenv = "0.15.0"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.2" }
aws-sdk-s3 = "0.31.0"
aws-config = "0.56.1"
aws-types = { version = "0.0.26-alpha" }