[package]
name = "route_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-server = "0.7.1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-serde_json-1"] }
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4"