[package]
name = "route_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "with-serde_json-1"] }
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["cors"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
